added openweather api to script file

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <!-- Column that will contain current weather for current search -->
         <div class="col-md-9 pt-3 pb-3">
-            <div id="current"></div>
+            <div id="current" class="card"></div>
         </div>
 
     </div>
