--- a/index.html
+++ b/index.html
@@ -50,10 +50,8 @@
     <!-- Container that will contain 5-day forecast -->
     <div class="row p-3">
         <div class="col-12">
-            <div class="card">
-                <h2 id="forecastHeader" class="mt-2 hide">5-Day Forecast:</h2>
-            <div class="row" id="forecast">
-            </div>
+            <div class="card" id="forecast">
+                
             </div>
         </div>
     </div>
@@ -61,5 +59,9 @@
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+<script
+      type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"
+    ></script>
 <script src="./Assets/script.js"></script>
 </html>
